css/styles.css
:root {
  --color-accent: #ccd8e5;
  --color-body: #545454;
  --color-heading: #000;
  --color-primary: #03989e;
  --color-secondary: #c4c4c4;
  --box-shadow-secondary: 0 4px 30px 10px rgb(0, 0, 0, 15%);
}

/* Typography */

html {
  font-size: 62.5%;
}

body {
  font-family: Roboto, Arial, Helvetica, sans-serif;
  color: #545454;
  margin: 0 0;
}

h1,
h2,
h3,
h4,
h5 {
  margin: 1rem 0;
  color: black;
}

h1 {
  font-size: 6.4rem;
}

h2 {
  font-size: 4.8rem;
}

h3 {
  font-size: 3.6rem;
}

h4 {
  font-size: 2.4rem;
}

h5 {
  font-size: 1.8rem;
}
p {
  font-size: 1.6rem;
  margin-top: 0rem;
}

@media screen and (min-width: 1024px) {
  body {
    font-size: 1.8rem;
  }

  h1 {
    font-size: 6rem;
  }

  h2 {
    font-size: 4rem;
  }

  h3 {
    font-size: 2.4rem;
  }
}

a {
  text-decoration: none;
  /* margin-top: ; */
}

/* Buttons */

.btn {
  cursor: pointer;
  display: block;
  font-size: 1.4rem;
  font-weight: bold;
  height: 4rem;
  margin-bottom: 1rem;
}

.btn--primary {
  background-color: var(--color-primary);
  border-radius: 8px;
  border: none;
  color: white;
  width: 19rem;
}

.btn--primary:hover {
  background-color: hsl(182, 96%, 37%);
}

.btn--secondary {
  background-color: white;
  border-radius: 30px;
  border: thin solid var(--color-primary);
  color: var(--color-primary);
  width: 90%;
  height: 3.5rem;
}

.btn--secondary:hover {
  background-color: var(--color-primary);
  color: white;
}

.btn--search {
  background-color: var(--color-primary);
  border-radius: 30px;
  border: 0;
  color: white;
  display: inline-block;
  height: 80%;
  font-size: small;
}

@media screen and (min-width: 1024px) {
  .btn {
    height: 4.7rem;
  }

  .btn--primary {
    width: 21rem;
  }

  .btn--secondary {
    height: 4rem;
  }
}

/* Inputs */

input {
  padding: 0.9rem 1.9rem;
  outline: 0;
  cursor: pointer;
  color: var(--color-primary);
}

::placeholder {
  color: var(--color-body);
}

.input-name,
.input-email,
.input-quantity,
.input-body {
  border-radius: 5px;
  width: 20rem;
  display: block;
  margin-bottom: 1rem;
}

.input-name:focus,
.input-email:focus,
.input-quantity:focus,
.input-body:focus {
  border-color: var(--color-primary);
  box-shadow: 0 0 0 2px hsl(182, 69%, 54%);
}

.search-input {
  border: 0;
  border-radius: 30px;
}

.input-group {
  width: 25rem;
  height: 3.5rem;
  white-space: nowrap;
  border: 2px solid var(--color-body);
  border-radius: 30px;
}

.input-group,
.search-input:focus {
  border-color: var(--color-primary);
}

@media screen and (min-width: 1024px) {
  .input-name,
  .input-email,
  .input-quantity,
  .input-body {
    width: 25rem;
  }

  .input-group {
    width: 30rem;
    height: 4rem;
  }

  .search-input {
    width: 60%;
    padding: 1.2rem 2rem;
    font-size: small;
  }

  .btn--search {
    width: 7rem;
    height: 80%;
  }
}

/* List */

.list {
  list-style: none;
  padding: 0 0;
  font-size: large;
  margin: 0 0;
}

/* Icons */

.icon {
  margin: 0 0;
  cursor: pointer;
}
.icon-logo {
  width: 50px;
  height: 50px;
}

.icon-search,
.icon-cart {
  width: 2.4rem;
  height: 2.4rem;
  margin-top: 0.6rem;
}

.icon-cart {
  margin-left: 0.2rem;
}

.icon-menu {
  width: 2rem;
  height: 2rem;
  margin-top: 0.8rem;
}

@media screen and (min-width: 1024px) {

  .icon-logo {
    width: 70px;
    height: 70px;
  }

  .icon-search,
  .icon-menu,
  .icon-cart {
    width: 2.5rem;
    height: 2.5rem;
  }
}

/* Cards */

.card {
  padding: 1rem 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 18rem;
  height: 10rem;
  background-color: var(--color-accent);
  border-radius: 5px;
  text-align: center;
  box-shadow: var(--box-shadow-secondary);
  margin-bottom: 2rem;
}
.card:last-child {
  margin-bottom: 0;
}

.card h5 {
  margin: 0 0;
}

.card p {
  font-size: 15px;
  margin-top: 0;
}

.card-container {
  align-items: center;
  display: flex;
  flex-direction: column;
}

@media screen and (min-width: 1024px) {
  .card {
    margin-right: 20rem;
    width: 23.3rem;
    border-radius: 3px;
    height: 14rem;
  }

  .card:last-child {
    margin-right: 0;
  }

  .card-container {
    flex-direction: row;
    justify-content: center;
  }
}

/* Product Card */

.product-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  width: 100vw;
}

.product {
  width: 16rem;
  height: 27rem;
  border-radius: 5px;
  margin-bottom: 2rem;
  box-shadow: 0 4px 10px 3px rgb(0, 0, 0, 15%);
  margin-right: 2rem;
}

.product:hover {
  transform: scale(1.03);
  transition: transform 0.3s;
}

.product:last-child {
  margin-right: 0;
}

.product-info {
  width: 100%;
  height: 25%;
  background-color: var(--color-primary);
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
  text-align: center;
  padding: 0.1px 0;
}

.product-info h5 {
  color: white;
}

.product-info p {
  color: var(--color-accent);
  font-size: 15px;
  font-weight: bold;
  margin-top: 10px;
  margin-bottom: 0;
}

.h5-1::after {
  content: "  incl.VAT";
  font-size: small;
  color: var(--color-accent);
}

.product-image {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.product-image img {
  width: 80%;
  height: 80%;
  border-radius: 5px;
  margin-bottom: 2.3rem;
  margin-top: 0.5rem;
}

/* Grids */

.grid {
  display: grid;
}

/* .grid--1x2 {
  grid-template-columns: repeat(2, 1fr);
} */

@media screen and (min-width: 768px) {
  .grid--1x2 {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media screen and (min-width: 1024px) {
  .grid--1x3 {
    grid-template-columns: repeat(3, 1fr);
  }
}

/* Collapsable */

.collapsible {
  padding: 0 1rem;
}

.collapsible__header {
  display: flex;
  justify-content: space-between;
}

.collapsible__content {
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.3s;
}

.collapsible__icon {
  width: 5rem;
  height: 5rem;
}

.collapsible--expanded .collapsible__chevron {
  transform: rotate(0);
}

.collapsible__chevron {
  transform: rotate(-90deg);
  transition: transform 0.3s;
}

.collapsible--expanded .collapsible__content {
  max-height: 100vh;
}

/* Nav-Bar */

.nav {
  display: flex;
  background-color: var(--color-secondary);
  justify-content: space-between;
  flex-wrap: wrap;
  padding: 0 1rem;
  align-items: center;
}

.nav__list {
  width: 100%;
  list-style: none;
}

.nav__item {
  padding: 0.5rem 2rem;
  border-bottom: thin solid var(--color-body);
}

.nav__item > a {
  color: #000;
  cursor: pointer;
  transition: color 0.2s;
}

.nav__item > a:hover {
  color: var(--color-primary);
}

.nav.collapsible--expanded .nav__toggler {
  transform: rotate(180deg);
  transition: transform 0.3s;
}

.nav__brand {
  transform: translate(5px);
}

@media screen and (min-width: 768px) {
  .nav__toggler {
    display: none;
  }

  .nav__list {
    width: auto;
    display: flex;
    font-size: 1.6rem;
    max-height: 100%;
    opacity: 1;
  }

  .nav__item {
    border: 0;
  }

  .icon-cart-search {
    order: 1;
  }

  .icon-search {
    margin-right: 2rem;
  }

  .icon-cart {
    margin-right: 1.3rem;
  }
}

/* Hero */
.hero {
  background-color: var(--color-secondary);
}

.hero__content {
  display: flex;
  flex-direction: column;
  width: 100%;
  text-align: center;
  align-items: center;
}

.hero__headline {
  font-size: 5rem;
  margin: 4rem 1.2rem 1rem;
}

.hero__tagline {
  letter-spacing: 0.5px;
  margin: 0 1.2rem 2rem;
}

@media screen and (min-width: 768px) {
  .hero__content {
    text-align: left;
    align-items: flex-start;
    width: 60%;
  }

  .hero__btn {
    margin-left: 1.2rem;
  }
}

/* Footer */

.footer {
  width: 100vw;
  height: 30rem;
  background-color: var(--color-body);
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 1.5rem 0;
  text-align: center;
}

.footer-links ul {
  margin: 0 0;
  padding: 0 0;
}

.footer-link {
  font-size: large;
  display: block;
  color: var(--color-secondary);
  margin-bottom: 0.3rem;
}

.footer-link:hover {
  color: white;
  transition: color 0.3s;
}

.contact-icons {
  height: 7rem;
  margin-bottom: 2rem;
}

.contact-icons h5 {
  color: var(--color-accent);
  margin: 2rem 0 0 0;
}

.footer-logo {
  height: 8rem;
  width: 100vw;
  padding: 0 0;
  display: flex;
  margin: 1rem 0;
  justify-content: center;
}

.footer p {
  color: var(--color-accent);
  display: block;
  width: 100%;
}

.icon-contact {
  width: 3rem;
  height: 3rem;
  margin: 1rem 0.6rem;
}

.footer-logo-icon {
  width: 6rem;
  height: 6rem;
}

.footer-logo h4 {
  color: var(--color-secondary);
  display: inline-block;
  font-size: 1.7rem;
  width: 6rem;
}

